manifests/jaeger-operator-2.54.0.tgz-manifest.yaml
---
# Source: jaeger-operator/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-jaeger-operator-metrics
  namespace: default
  labels:
    
    app.kubernetes.io/name: jaeger-operator
    app.kubernetes.io/instance: my-release
spec:
  ports:
  - name: metrics
    port: 8383
    protocol: TCP
    targetPort: 8383
  selector:
    app.kubernetes.io/name: jaeger-operator
    app.kubernetes.io/instance: my-release
  type: ClusterIP
---
# Source: jaeger-operator/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    
    app.kubernetes.io/name: jaeger-operator
    app.kubernetes.io/instance: my-release
  name: jaeger-operator-webhook-service
  namespace: default
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    
    app.kubernetes.io/name: jaeger-operator
    app.kubernetes.io/instance: my-release
---
# Source: jaeger-operator/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-jaeger-operator
  namespace: default
  labels:
    
    app.kubernetes.io/name: jaeger-operator
    app.kubernetes.io/instance: my-release
spec:
  replicas: 1
  selector:
    matchLabels:
      
      app.kubernetes.io/name: jaeger-operator
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      name: my-release-jaeger-operator
      labels:
        
        app.kubernetes.io/name: jaeger-operator
        app.kubernetes.io/instance: my-release
    spec:
      serviceAccountName: my-release-jaeger-operator
      containers:
        - name: my-release-jaeger-operator
          image: "jaegertracing/jaeger-operator:1.57.0"
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8383
            name: metrics
          - containerPort: 9443
            name: webhook-server
            protocol: TCP
          volumeMounts:
          - mountPath: /tmp/k8s-webhook-server/serving-certs
            name: cert
            readOnly: true
          args:
            - start
            - --metrics-port=8383
            - --webhook-bind-port=9443
          resources:
            {}
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: jaeger-operator-service-cert
---
# Source: jaeger-operator/templates/mutating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: default/jaeger-operator-service-cert
  labels:
    
    app.kubernetes.io/name: jaeger-operator
    app.kubernetes.io/instance: my-release
  name: jaeger-operator-mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: jaeger-operator-webhook-service
      namespace: default
      path: /mutate-v1-deployment
  failurePolicy: Ignore
  name: deployment.sidecar-injector.jaegertracing.io
  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - jaeger-operator
  rules:
  - apiGroups:
    - apps
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - deployments
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: jaeger-operator-webhook-service
      namespace: default
      path: /mutate-jaegertracing-io-v1-jaeger
  failurePolicy: Fail
  name: mjaeger.kb.io
  rules:
  - apiGroups:
    - jaegertracing.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - jaegers
  sideEffects: None
---
# Source: jaeger-operator/templates/validating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: default/jaeger-operator-service-cert
  name: jaeger-operator-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: jaeger-operator-webhook-service
      namespace: default
      path: /validate-jaegertracing-io-v1-jaeger
  failurePolicy: Fail
  name: vjaeger.kb.io
  rules:
  - apiGroups:
    - jaegertracing.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - jaegers
  sideEffects: None
